@@ -1,8 +1,11 @@
 DIST tlenlinux-7.0.1.68.bin 20115011 RMD160 0e9d648b6d5f6ee0165fdbab99658d862c3e78f7 SHA1 97de0d3f63faf0157d324786ea11e49c2431ac1c SHA256 5996dac36e3cca28480201cb2c7f9bb4b53d83b5271fc4a9085971fd6251301d
 DIST tlenlinux-7.0.1.71.bin 21271279 RMD160 2c868a19b45d6dedaf89533c2c698f195ab9d2e4 SHA1 2570f227d6b1fac56b7354d20600457d6bf23100 SHA256 62ab6bed150439158aa69cf41679777cbd0556c3c74ced4e87c060a467062d82
+DIST tlenlinux-7.0.1.72.bin 21316223 RMD160 2b9cd06c8e9d3711c0e8a967e23483cbb584bb16 SHA1 4e98f428969c305a0bbcdc65a7d8de69d8b27895 SHA256 63487a1cab64bf2a473aa989d8eee251709216a73ffa2e53aa3c54144bb4b2d1
 DIST tlenlinux64-7.0.1.68.bin 19828794 RMD160 c72abef9596cd16e404b9f981ec7a5d5094db2e9 SHA1 0c9bf497e1a20a1e4b110a25f97712792af50aab SHA256 e15d6a6662f4109d5670d2cf399939d2d842e3fde9eed5e10de7530303074fe2
 DIST tlenlinux64-7.0.1.71.bin 21113508 RMD160 cd020ff59a7f7860a5d42b536d0ef791c88f983b SHA1 4ee8e798e687cf387a6f53f88421e8f7ffef4763 SHA256 74f6e88f7abcacb4d87ff781c1f359585266943d0689973b513f422c22584dfd
+DIST tlenlinux64-7.0.1.72.bin 21174895 RMD160 77b59f07de2c2af8b27a0b958591e94d71d55456 SHA1 573516d9c05fa0a3cd574679710b5f89f9481fe3 SHA256 ca355a8d63977eb6b46bb9aea9585d71997cbbbed539b2f0d45704aeeb62830c
 EBUILD tlenlinux-7.0.1.68.ebuild 2151 RMD160 85c725245c84da2a6ce1803bce38bb7d4256255e SHA1 0e7b61a6580aafcfa32ca141ffb3354fc6d2eba5 SHA256 9d040fdd87b3e181c6855038836f4e4fdce0ce4ff3746f09bff0b3b9f271b8e0
 EBUILD tlenlinux-7.0.1.71.ebuild 2151 RMD160 5ac50f2ded2805eda4c854fdaa936c271dc58e9a SHA1 278f8efd4678572905d010eec596c72bfb04f1d1 SHA256 390f7adf2933af22375e0958a7a548701d8c35fff0296efb4d6e68313be65e0d
-MISC ChangeLog 1472 RMD160 1acd0add9a6c37f6389a458f5f54045aec0d36dc SHA1 1f021cba190fcec16b767dc65a273eb86ba75760 SHA256 5c73c4c8db57f24f3285db8d9d8bdfa602d5359112d1e86e79e1243757347633
+EBUILD tlenlinux-7.0.1.72.ebuild 2151 RMD160 5ac50f2ded2805eda4c854fdaa936c271dc58e9a SHA1 278f8efd4678572905d010eec596c72bfb04f1d1 SHA256 390f7adf2933af22375e0958a7a548701d8c35fff0296efb4d6e68313be65e0d
+MISC ChangeLog 1595 RMD160 4a2480e51a3e0afa64cce166555d466d7e2409d6 SHA1 0044aede427751a77e463edddee2baa59c153f0c SHA256 6c2946b3a5544af0bb0bb55f80559a4b3585ea0579c7aa440f6a135d4b00c5e0
 MISC metadata.xml 409 RMD160 eb928c10790c7faab81f4eb674682b7cd68d47d3 SHA1 628e18d34931c7220c5276e5ea2142eb6c96b1e8 SHA256 867a9917a31e1adc68fd0def5c942781e125b2df1d1619371a7edb42e9a0d20d
